--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -6,6 +6,10 @@
   position:relative;
 }
 
+.cursor-pointer {
+  cursor:pointer;
+}
+
 /**
   Nav Sidebar
  */
@@ -72,4 +76,23 @@
     bottom: 2px;
   }
 
+}
+/**
+ File Container
+ */
+
+.file-container {
+  .image {
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+
+  .file-name {
+    height:60px;
+    word-break: break-all;
+  }
+
+  .btn-delete-file {
+    color: grey;
+  }
 }
