--- a/public/css/app.css
+++ b/public/css/app.css
@@ -103,3 +103,11 @@
   padding: 0;
 }
 
+.note-row .action button {
+  visibility: hidden;
+}
+
+.note-row:hover .action button {
+  visibility: visible;
+}
+
