user account update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -111,3 +111,12 @@
   visibility: visible;
 }
 
+/**
+ Avatar Container
+ */
+
+.avatar-container .image {
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
