user image update update

--- a/resources/assets/sass/account.scss
+++ b/resources/assets/sass/account.scss
@@ -3,7 +3,8 @@
  */
 
 .avatar-container {
-  .image {
+  .image-container {
+    height:150px;
     background-size: cover;
     background-position: 50% 50%;
   }
