--- a/public/css/app.css
+++ b/public/css/app.css
@@ -115,7 +115,8 @@
  Avatar Container
  */
 
-.avatar-container .image {
+.avatar-container .image-container {
+  height: 150px;
   background-size: cover;
   background-position: 50% 50%;
 }
