--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -98,3 +98,28 @@
     color: grey;
   }
 }
+
+/**
+ * Entity row hover buttons
+ */
+
+.entity-row {
+  .action button, .action a  {
+    visibility: hidden;
+    -webkit-transition-property: none;
+    -moz-transition-property: none;
+    -o-transition-property: none;
+    transition-property: none;
+  }
+
+  &:hover{
+    .action button, .action a {
+      visibility: visible;
+      -webkit-transition-property: none;
+      -moz-transition-property: none;
+      -o-transition-property: none;
+      transition-property: none;
+    }
+  }
+
+}
